--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+<a name="topofpage"></a>
 <div class="article">
 
 	<div class="article-title h1"><%= @article.title %></div>
@@ -30,10 +31,11 @@
 	<div class="article-content"><%= simple_format(@article.content) %></div>
 </div>
 
+<% message = "Leave a Comment and Join the Discussion" %>
 <% if signed_in? %>
-	<%= link_to 'Reply This Article', new_article_comment_path(@article) %>
+	<%= link_to message, new_article_comment_path(@article) %>
 <% else %>
-	<%= link_to 'Reply This Article', '/auth/steam' %>
+	<%= link_to message, '/auth/steam' %>
 <% end %>
 
 <% @article.comments.each do |comment| %>
@@ -45,3 +47,6 @@
 	</p>
 <% end %>
 
+<div class="topofpage">
+	<a href="#topofpage"><span class="fa fa-arrow-up"></span> Top of page</a>
+</div>
