--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -74,57 +74,20 @@
 		</div>
 	</div>
 
+	<div class="container">
+		<div class="row">
 
-	<div class="row">
-
-		<!-- Users table -->
-		<div class="col-sm-6">
-			<div class="row">
-
-				<div class="col-sm-9"><h3 class="h3-title">Top 5 Gamers (by today playtime)</h3></div>
-				<div class="col-sm-3">
-					<%= link_to articles_path, class: 'btn btn-default align-bottom' do %>
-						View all articles
-					<% end %>
-				</div>
-
-				<div class="col-sm-3">
-				</div>
-			</div>
-
-			<table data-toggle="table" data-sort-name="today_playtime" data-sort-order="desc" class="home-user-table">
-				<thead>
-					<tr>
-						<th data-sortable="true">User</th>
-						<th data-field="today_playtime" data-sortable="true">Today Playtime</th>
-						<th data-field="total_playtime" data-sortable="true">Total Playtime</th>
-					</tr>
-				</thead>
-
-				<tbody>
-					<% @users_top5.each do |user| %>
-						<tr>
-							<td>
-								<%= link_to user_path(user), target: "_self" do %>
-									<%= image_tag user.avatar_url, title: user.nickname, class: "d" %> <%= user.nickname %>
-								<% end %>
-							</td>
-							<% user_playtimes = user.playtimes %>
-							<% user_total_playtime = user_playtimes.maximum(:total_playtime) %>
-							<td><%= user_playtimes.where(total_playtime: user_total_playtime)[0].today_playtime %></td>
-							<td><%= user_total_playtime %></td>
-						</tr>
-					<% end %>
-				</tbody>
-			</table>
-		</div>
-
-		<!-- Followers table -->
-		<!-- signed_in? <=> true -->
-		<% if signed_in? %>
+			<!-- Users table -->
 			<div class="col-sm-6">
 				<div class="row">
-					<div class="col-sm-9"><h3 class="h3-title">Followers</h3></div>
+
+					<div class="col-sm-9"><h3 class="h3-title">Top 5 Gamers (by today playtime)</h3></div>
+					<div class="col-sm-3">
+						<%#= link_to articles_path, class: 'btn btn-default align-bottom' do %>
+							View all users
+						<%# end %>
+					</div>
+
 					<div class="col-sm-3">
 					</div>
 				</div>
@@ -139,13 +102,13 @@
 					</thead>
 
 					<tbody>
-						<!-- FIXME - to find top 5 followers by today_playtime -->
-						<!-- current_user <=> User.last -->
-						<% followers = current_user.followers.first(5) %>
-						<% followers.each do |follower| %>
-							<% user = @users.find(follower.follower_id) %>
+						<% @users_top5.each do |user| %>
 							<tr>
-								<td><%= image_tag user.avatar_url, title: user.nickname, class: "d" %> <%= user.nickname %></td>
+								<td>
+									<%= link_to user_path(user), target: "_self" do %>
+										<%= image_tag user.avatar_url, title: user.nickname, class: "d" %> <%= user.nickname %>
+									<% end %>
+								</td>
 								<% user_playtimes = user.playtimes %>
 								<% user_total_playtime = user_playtimes.maximum(:total_playtime) %>
 								<td><%= user_playtimes.where(total_playtime: user_total_playtime)[0].today_playtime %></td>
@@ -155,7 +118,45 @@
 					</tbody>
 				</table>
 			</div>
-		<% end %>
+
+			<!-- Followers table -->
+			<!-- signed_in? <=> true -->
+			<% if signed_in? %>
+				<div class="col-sm-6">
+					<div class="row">
+						<div class="col-sm-9"><h3 class="h3-title">Followers</h3></div>
+						<div class="col-sm-3">
+						</div>
+					</div>
+
+					<table data-toggle="table" data-sort-name="today_playtime" data-sort-order="desc" class="home-user-table">
+						<thead>
+							<tr>
+								<th data-sortable="true">User</th>
+								<th data-field="today_playtime" data-sortable="true">Today Playtime</th>
+								<th data-field="total_playtime" data-sortable="true">Total Playtime</th>
+							</tr>
+						</thead>
+
+						<tbody>
+							<!-- FIXME - to find top 5 followers by today_playtime -->
+							<!-- current_user <=> User.last -->
+							<% followers = current_user.followers.first(5) %>
+							<% followers.each do |follower| %>
+								<% user = @users.find(follower.follower_id) %>
+								<tr>
+									<td><%= image_tag user.avatar_url, title: user.nickname, class: "d" %> <%= user.nickname %></td>
+									<% user_playtimes = user.playtimes %>
+									<% user_total_playtime = user_playtimes.maximum(:total_playtime) %>
+									<td><%= user_playtimes.where(total_playtime: user_total_playtime)[0].today_playtime %></td>
+									<td><%= user_total_playtime %></td>
+								</tr>
+							<% end %>
+						</tbody>
+					</table>
+				</div>
+			<% end %>
+		</div>
 	</div>
 
 
