--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,13 +65,20 @@
 			</div>
 		</div>
 
-		<div class="col-sm-4">
-			<h3 class="h3-title">Activity</h3>
-			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
-			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
-			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
-			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
-		</div>
+		<!-- Activity feed -->
+		<% if signed_in? %>
+			<div class="col-sm-4">
+				<h3 class="h3-title">Activity Feed</h3>
+				<div class="activity-feed">
+					<% @activities_home.each do |activity| %>
+						<div class="feed-item">
+							<div class="date"><%= Date.parse(activity.created_at.to_s) %></div>
+							<div class="text"><%= activity.content %></div>
+						</div>
+					<% end %>
+				</div>
+			</div>
+		<% end %>
 	</div>
 
 	<div class="container">
