--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -291,3 +291,40 @@
     margin-right:30px   ;
     width:50px;
 }
+
+// Adapted from https://bootsnipp.com/snippets/7QXrr
+.activity-feed {
+    padding: 15px;
+    .feed-item {
+        position: relative;
+        padding-bottom: 20px;
+        padding-left: 30px;
+        border-left: 2px solid #e4e8eb;
+        .date {
+            position: relative;
+            top: -5px;
+            color: #8c96a3;
+            text-transform: uppercase;
+            font-size: 13px;      
+        }
+        .text {
+            position: relative;
+            top: -3px;
+        }
+    }
+    .feed-item:last-child {
+        border-color: transparent;
+    }
+    .feed-item:after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: -6px;
+        width: 10px;
+        height: 10px;
+        border-radius: 6px;
+        background: #fff;
+        border: 1px solid #f37167;
+    }
+}
