--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
     <div class="col-lg-6">
        <div class="row" id="user-profile">
         <div class="col-sm-3">
-          <%= image_tag @user.avatar_url, class:"steam-avatar"%>
+          <%= image_tag @user.avatar_url, size:"124", class:"steam-avatar"%>
         </div>
 
           <div class="col-sm-3">
