--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -104,6 +104,7 @@
 	height: 195px;
 	padding: 5px;
 	position: relative;
+    margin-top: -22px;
 }
 
 .article-text-second-long {
@@ -218,7 +219,7 @@
       overflow: hidden;
       background-color: #272121;
       width: 100%;
-      height: 200px;
+      height: 260px;
     }
 
 .footer-icon {
@@ -262,12 +263,17 @@
     width: 50px;
     padding-top: 0px;
 }
+table {
+    border-collapse: collapse;
+}
 
 .home-user-table {
   width: 100%;
+
   th, td {
-    border: 1px solid #fff;
-    padding: 8px;
+    border: 0px solid black;
+    padding: 4px;
+
     a {
       color: inherit;
     }
@@ -284,4 +290,8 @@
 
 .search {
     width:49px;
+}
+
+tr:nth-child(even) {
+    background: whitesmoke
 }
