--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,26 +1,26 @@
 <footer>
-		<div class="container-fluid section footer section-narrow text-white text-center">
+		<div class="container-stretch section footer section-narrow text-white text-center">
 			<div class="row">
-				<nav class="col-sm-3"></nav>
+				
 				<nav class="col-sm-3">
-					<p>Follow us</p>
-			<%= link_to (image_tag "square.svg" , class: 'footer-icon'), root_path %>
-			<%= link_to (image_tag "twitter.ico" , class: 'footer-icon'), root_path %>
-			<%= link_to (image_tag "facebook.png" , class: 'footer-icon'), root_path %>
+					<ul>
+			<div id="social-links">
+			<%= link_to(root_path) do %>
+				<i class="fa fa-steam-square fa-3x fa-inverse" aria-hidden="true"></i>
+			<% end %>
+			<br>
+			<%= link_to(root_path) do %>
+				<i class="fa fa-twitter fa-3x fa-inverse" aria-hidden="true"></i>
+			<% end %>
+			<br>
+			<%= link_to(root_path) do %>
+				<i class="fa fa-facebook fa-3x fa-inverse" aria-hidden="true"></i>
+			<% end %>
+			</div>
 				</nav>
-				<nav class="col-sm-3">
-					<div class="social">
-						<a href="#" class="footer-link">About SmartGamer</a><br>
-					</div>
-					<div class="social">
-						<a href="#" class="footer-link">Privacy</a>
-					</div>
-					<div class="social">
-						<a href="#" class="footer-link">Terms</a>
-					</div>
+				<nav class="col-sm-3"><h3 class="faded">SmartGamer</h3></nav>
+				
 			
-				</nav>
-				<nav class="col-sm-3"></nav>
 			
 		</div>
 	</div>
