solved home/views conflicts

--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -295,7 +295,8 @@ table {
 
 
 tr:nth-child(even) {
-    background: whitesmoke
+    background: whitesmoke;
+}
 
 .steam_log_in {
     margin-right:30px   ;
