--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -152,7 +152,11 @@
 							<% followers.each do |follower| %>
 								<% user = @users.find(follower.follower_id) %>
 								<tr>
-									<td><%= image_tag user.avatar_url, title: user.nickname, class: "d" %> <%= user.nickname %></td>
+									<td>
+										<%= link_to user_path(follower.follower_id), target: "_self" do %>
+											<%= image_tag user.avatar_url, title: user.nickname, class: "d" %> <%= user.nickname %>
+										<% end %>
+									</td>
 									<% user_playtimes = user.playtimes %>
 									<% user_total_playtime = user_playtimes.maximum(:total_playtime) %>
 									<td><%= user_playtimes.where(total_playtime: user_total_playtime)[0].today_playtime %></td>
