Place commendations as part of tab pane

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
 			<div class="row">
 				<div class="col-lg-9 "><h3 class="h3-title">Articles</h3></div>
 				<div class="col-lg-3">
-					<%= link_to articles_path, class: 'btn btn-default align-bottom' do %>
+					<%= link_to articles_path, class: 'btn btn-default' do %>
 						View all articles
 					<% end %>
 				</div>
