--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -116,3 +116,19 @@ $background-dark: #403F48;
     font-size: 0.8em;
   }
 }
+
+.commendation-item {
+  display: inline-block;
+  background-color: #e6e9ec;
+  padding: 8px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  .commendation-name {
+    font-weight: 600;
+    letter-spacing: 2px;
+  }
+}
+.commendation-plus {
+  display: inline-block;
+}
