--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -142,9 +142,12 @@
         <% @commendations.each do |commendation| %>
           <div>
             <%= commendation.image %>
-            <%= commendation.name %>
-            <%= commendation.count %>
-            <%= link_to '<i class="fa fa-plus-square-o"></i>'.html_safe, user_commendation_path(commendation.user_id, commendation.id), :method => :put  %>
+            <div class="commendation-item">
+              <span class="commendation-name"><%= commendation.name %></span>
+               - 
+              <span><%= commendation.count %></span>
+            </div>
+            <div class="commendation-plus"><%= link_to '<i class="fa fa-plus-square-o fa-2x"></i>'.html_safe, user_commendation_path(commendation.user_id, commendation.id), :method => :put  %></div>
           </div>
         <% end %>
       </div>
