only display self and following activities

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -134,7 +134,7 @@
 			<% if signed_in? %>
 				<div class="col-sm-6">
 					<div class="row">
-						<div class="col-sm-9"><h3 class="h3-title">Followers</h3></div>
+						<div class="col-sm-9"><h3 class="h3-title">Following</h3></div>
 						<div class="col-sm-3">
 						</div>
 					</div>
