--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -100,6 +100,7 @@
 					<div class="col-sm-3">
 						<%#= link_to articles_path, class: 'btn btn-default align-bottom' do %>
 							View all users
+							<%= link_to 'View all users', users_index_path %>
 						<%# end %>
 					</div>
 
