--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>SmartGamer</title>
     <%= csrf_meta_tags %>
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -18,17 +18,17 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
 
-   
 
 
-    
+
+
 
   </head>
 
   <body>
     <%= render 'shared/navbar' %>
     <div class="container main-container">
-      
+      <%= flash_messages %>
       <%= yield %>
     </div>
   </body>
