--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -299,8 +299,9 @@ tr:nth-child(even) {
 }
 
 .steam_log_in {
+    margin-top: -2px;
     margin-right:30px   ;
-    width:50px;
+    width:95px;
 }
 
 // Adapted from https://bootsnipp.com/snippets/7QXrr
@@ -316,7 +317,7 @@ tr:nth-child(even) {
             top: -5px;
             color: #8c96a3;
             text-transform: uppercase;
-            font-size: 13px;      
+            font-size: 13px;
         }
         .text {
             position: relative;
