--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,28 +1,46 @@
-<div class="container container-small"
-<%= form_for @user do |form| %>
-<%= form.label :name %><br>
-<%= form.text_field :name %><br>
+<%= form_for @user, html: { class: 'form-horizontal' } do |form| %>
+	<div class="form-group">
+	  <%= form.label :name, class: 'col-sm-2 control-label' %>
+	  <div class="col-sm-3">
+		  <%= form.text_field :name, placeholder: 'Name', class: 'form-control' %>
+	  </div>
+	</div>
 
-<%= form.label :nickname %><br>
-<%= form.text_field :nickname %><br>
+	<div class="form-group">
+	  <%= form.label :nickname, class: 'col-sm-2 control-label' %>
+	  <div class="col-sm-3">
+		  <%= form.text_field :nickname, placeholder: 'Nickname', class: 'form-control' %>
+	  </div>
+	</div>
 
-<%= form.label :email %><br>
-<% if @user.email == "example@na.com" %>
-  <%= form.email_field :email, :value => nil, placeholder: "Enter Your Email" %>
-<% else %>
-  <%= form.email_field :email, disabled: true %><br>  
-<% end %>
-</div>
-<div class="container container-small"
-<%= form.label :desired_playtime %><br>
-<%= form.text_field :desired_playtime %><br>
+	<div class="form-group">
+	  <%= form.label :email, class: 'col-sm-2 control-label' %>
+	  <div class="col-sm-3">
+		  <% if @user.email == "example@na.com" %>
+			  <%= form.email_field :email, :value => nil, placeholder: "Enter Your Email", class: 'form-control' %>
+			<% else %>
+			  <%= form.email_field :email, disabled: true, class: 'form-control' %>  
+			<% end %>
+	  </div>
+	</div>
 
-<%= form.label :privacy %><br>
-<%= form.select :privacy, User.privacies.keys.to_a %><br>
+	<div class="form-group">
+	  <%= form.label :desired_playtime, class: 'col-sm-2 control-label' %>
+	  <div class="col-sm-3">
+		  <%= form.number_field :desired_playtime, placeholder: 'Desired playtime', class: 'form-control' %>
+	  </div>
+	</div>
 
- <hr>
-   <%= form.submit %><br>
-</div>
+	<div class="form-group">
+	  <%= form.label :privacy, class: 'col-sm-2 control-label' %>
+	  <div class="col-sm-3">
+		  <%= form.select :privacy, User.privacies.keys.to_a, {}, class: 'form-control' %>
+	  </div>
+	</div>
 
-
+  <div class="submit-field form-group">
+  	<div class="col-sm-offset-2 col-sm-3">
+      <%= form.submit 'Update User', class: 'btn btn-default' %>
+  	</div>
+  </div>
 <% end %>
