add reply article at articles#index page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -141,7 +141,7 @@
       </div>
 
       <!-- Commendations -->
-      <div id="my_commendations" class="tab-pane fade-background-color-div">
+      <div id="my_commendations" class="tab-pane fade background-color-div">
         <h3>Commendations</h3>
         <% @commendations.each_with_index do |commendation, index| %>
           <div>
