--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -33,7 +33,7 @@
 
 <% message = "Leave a Comment and Join the Discussion" %>
 <% if signed_in? %>
-	<%= link_to message, new_article_comment_path(@article) %>
+	<%= link_to message, new_article_comment_path(@article), id: "new_comment", remote:true %>
 <% else %>
 	<%= link_to message, '/auth/steam' %>
 <% end %>
