--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,19 @@
-<!-- Comment reply -->
-<div class="form-group">
-  <%= form.label :reply_article, class: 'col-sm-2 control-label' %>
-  <div class="col-sm-9">
-	  <%= form.text_field :reply_article, required: true, class: 'form-control' %>
+<%= form_for [@article, @comment], html: { class: 'form-horizontal' } do |form| %>
+
+	<!-- Comment reply -->
+	<div class="form-group">
+	  <%= form.label :reply_article, class: 'col-sm-2 control-label' %>
+	  <div class="col-sm-9">
+		  <%= form.text_field :reply_article, required: true, class: 'form-control' %>
+	  </div>
+	</div>
+
+	<%= form.hidden_field :user_id, :value => current_user.id %>
+	<%= form.hidden_field :article_id, :value => @article.id %>
+
+	<!-- Submit button to create comments -->
+  <div class="form-group text-center">
+      <%= form.submit 'Comment!', class: 'btn btn-default' %>
   </div>
-</div>
+
+<% end %>
