--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,7 +4,7 @@
 	<div class="form-group">
 	  <%= form.label :reply_article, class: 'col-sm-2 control-label' %>
 	  <div class="col-sm-9">
-		  <%= form.text_field :reply_article, required: true, class: 'form-control' %>
+		  <%= form.text_area :reply_article, required: true, class: 'form-control' %>
 	  </div>
 	</div>
 
