--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -42,3 +42,13 @@
 .topofpage {
 	margin-top: 100px;
 }
+
+
+.comment-wrapper {
+	border: 1px solid #efefef;
+	background-color: #fff;
+	border-radius: 4px;
+	margin-bottom: 18px;
+	padding: 16px 18px 16px 18px;
+	width: 50%;
+}
