--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -34,7 +34,11 @@
 <% @article.comments.each do |comment| %>
 	<div class="comment-wrapper">
 		<div>
-			<%= comment.reply_article %>
+			<span class="comment-author"><%= comment.user.nickname %></span> says:
+		</div>
+		<div class="comment-date"><%= comment.updated_at.strftime("%a, %d %b %Y, %I:%M%p") %></div>
+		<div>
+			<%= simple_format(comment.reply_article) %>
 		</div>
 		<% if comment.user_id == current_user.id %>
 			<%= link_to 'Edit Comment', edit_article_comment_path(@article, comment) %>
@@ -43,12 +47,14 @@
 	</div>
 <% end %>
 
-<% message = "Leave a Comment and Join the Discussion" %>
-<% if signed_in? %>
-	<%= link_to message, new_article_comment_path(@article), id: "new_comment", remote:true %>
-<% else %>
-	<%= link_to message, '/auth/steam' %>
-<% end %>
+<div class="new_comment_link">
+	<% message = "Leave a Comment and Join the Discussion" %>
+	<% if signed_in? %>
+		<%= link_to message, new_article_comment_path(@article), id: "new_comment", remote:true %>
+	<% else %>
+		<%= link_to message, '/auth/steam' %>
+	<% end %>
+</div>
 
 <div class="topofpage">
 	<a href="#topofpage"><span class="fa fa-arrow-up"></span> Top of page</a>
