--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@article, @comment], html: { class: 'form-horizontal' } do |form| %>
+<%= form_for [@article, @comment], html: { class: 'form-horizontal', id: 'new_comment' }, remote:true do |form| %>
 
 	<!-- Comment reply -->
 	<div class="form-group">
