remove duplicate view all users

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -98,10 +98,9 @@
 
 					<div class="col-sm-9"><h3 class="h3-title">Top 5 Gamers (by today playtime)</h3></div>
 					<div class="col-sm-3">
-						<%#= link_to articles_path, class: 'btn btn-default align-bottom' do %>
+						<%= link_to users_path, class: 'btn btn-default align-bottom' do %>
 							View all users
-							<%= link_to 'View all users', users_index_path %>
-						<%# end %>
+						<% end %>
 					</div>
 
 					<div class="col-sm-3">
