--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -270,17 +270,21 @@ table {
 
 .home-user-table {
   width: 100%;
-
   th, td {
     border: 0px solid black;
     padding: 4px;
-
     a {
       color: inherit;
     }
   }
   tbody tr:hover td {
     background: #666666;
+  }
+  td .table-user-avatar {
+    display: inline-block;
+    img {
+        width: 50%;
+    }
   }
 }
 
