--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -37,11 +37,11 @@
 						<% end %>
 
 					</li>
-
+        <!-- messages>
 				<li>
 					<a href="#"><i class="fa fa-envelope-o"></i> Messages</a>
 				</li>
-
+        <!-->
 
 			</ul>
 		</div>
