--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -1,4 +1,4 @@
-.container{
+.container-table{
     padding-top: 75px;
     padding-bottom: 75px;
 }
@@ -153,7 +153,7 @@
 }
 
 #custom-search-input {
-        margin-top:13px;
+        margin-top:7px;
         display: inline-block;
         width:250px;
     }
@@ -345,4 +345,23 @@ tr:nth-child(odd) {
 .avatar-small {
     width: 36px;
     height: 36px;
+}
+
+.smart-logo {
+
+    width: 36px;
+    height: 36px;
+}
+
+#navbar-main {
+    background-color: #333332;
+}
+
+.nav-text {
+    color: #777777;
+}
+
+.navbar-logo {
+    position: relative;
+    bottom: 10px;
 }
