--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -90,7 +90,7 @@
 		<% end %>
 	</div>
 
-	<div class="container">
+	<div class="container-table">
 		<div class="row">
 			<!-- Users table -->
 			<div class="col-sm-6">
