--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -32,21 +32,7 @@
 </div>
 
 <div class="comment-container">
-	<% @article.comments.each do |comment| %>
-		<div class="comment-wrapper">
-			<div>
-				<span class="comment-author"><%= comment.user.nickname %></span> says:
-			</div>
-			<div class="comment-date"><%= comment.updated_at.strftime("%a, %d %b %Y, %I:%M%p") %></div>
-			<div>
-				<%= simple_format(comment.reply_article) %>
-			</div>
-			<% if comment.user_id == current_user.id %>
-				<%= link_to 'Edit Comment', edit_article_comment_path(@article, comment) %>
-				<%= link_to 'Delete Comment', article_comment_path(@article, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
-			<% end %>
-		</div>
-	<% end %>
+	<%= render @article.comments %>
 </div>
 
 <div class="new_comment_link">
