--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,13 +24,8 @@
 		</div>
 
 		<div class="collapse navbar-collapse" id="navbar">
-        <% if signed_in?  %>
+      <% unless signed_in?  %>
         <ul class="nav navbar-nav pull-right">
-          <li><%= link_to 'Log Out', logout_path, method: :delete, class:"nav-text"%></li>
-        </ul>
-      <% else %>
-        <ul class="nav navbar-nav pull-right">
-
           <li><%= link_to image_tag('steam_01', class: "steam_log_in"), '/auth/steam' %></li>
         </ul>
       <% end %>
