--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -14,7 +14,7 @@
 	<!-- Submit button to create comments -->
 	<div class="row">
 	  <div class="form-group col-sm-8 text-right">
-	     <%= form.submit 'Post Comment', class: 'btn btn-default' %>
+	     <%= form.submit class: 'btn btn-default' %>
 	  </div>
 	</div>
 
