--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@ body{
 		font-family: 'Ubuntu', sans-serif !important;
 		padding-top: 100px;
 		margin-bottom: 60px;
+		min-height: 780px;
 
 	}
 }
