--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,6 +5,7 @@
 				<nav class="col-sm-3">
 					<ul>
 			<div id="social-links">
+				<h4>Follow us</h4>
 			<%= link_to(root_path) do %>
 				<i class="fa fa-steam-square fa-3x fa-inverse" aria-hidden="true"></i>
 			<% end %>
