--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -71,7 +71,12 @@
 
       
       <li><a data-toggle="pill" href="#about_me">About Me</a></li>
+      <% if current_user == @user %>
       <li><a data-toggle="pill" href="#my_games">My Games</a></li>
+      <% else %>
+      <li><a data-toggle="pill" href="#my_games">Games</a></li>
+      <% end %>
+
       <li><a data-toggle="pill" href="#my_achievements">Achievements</a></li>
       <li><a data-toggle="pill" href="#my_commendations">Commendations</a></li>
       <% if current_user == @user %>
