--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -9,7 +9,7 @@
 		</div>
 		<% if comment.user_id == current_user.id %>
 			<%= link_to 'Edit Comment', edit_article_comment_path(comment.article_id, comment) %>
-			<%= link_to 'Delete Comment', article_comment_path(comment.article_id, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
+			<%= link_to 'Delete Comment', article_comment_path(comment.article_id, comment), method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
 		<% end %>
 	</div>
 </div>
