--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
 
 		<div class="collapse navbar-collapse" id="navbar">
       <% unless signed_in?  %>
-        <ul class="nav navbar-nav pull-right">
+        <ul class=" navbar-nav pull-right">
           <li><%= link_to image_tag('steam_01', class: "steam_log_in"), '/auth/steam' %></li>
         </ul>
       <% end %>
